<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- payment -->    
    <string name="app_name">Splay Payment</string>
    <string name="payment_main_title">Thêm xu chơi thêm vui</string>
    <string name="payment_card_title">Nạp xu qua thẻ cào</string>
    <string name="payment_sms_item">&lt;font color=\'#128ed5\'>Nạp ngay 30.000 xu bằng&lt;/font> &lt;font color=\'#0e526f\'> SMS&lt;/font> &lt;font color=\'#128ed5\'>giá 15.000 VNĐ&lt;/font></string>
    <string name="payment_wapcharging_item">&lt;font color=\'#128ed5\'>Nạp 30.000 xu bằng 15.000 VNĐ trong &lt;/font> &lt;font color=\'#0e526f\'>TK điện thoại&lt;/font></string>
    <string name="payment_card_item">&lt;font color=\'#128ed5\'>Đổi xu chơi game bằng thẻ cào giá ưu đãi &lt;/font> &lt;font color=\'#0e526f\'> SIÊU&lt;/font> &lt;font color=\'#128ed5\'> khuyến mãi&lt;/font></string>
    <string name="payment_free_coin">&lt;font color=\'#128ed5\'>Free Coin&lt;/font></string>
    <string name="payment_google_visa">&lt;font color=\'#128ed5\'>Google Visa&lt;/font></string>
    <string name="payment_other_item">&lt;font color=\'#128ed5\'>Các hình thức thanh toán khác với nhiều ưu đãi siêu "&lt;/font> &lt;font color=\'#0e526f\'> HOT&lt;/font> &lt;font color=\'#128ed5\'>"&lt;/font></string>
    <string name="payment_main_caption">Nhấp để lựa chọn phương thức thanh toán</string>
    <string name="payment_card_caption">Nhấp để lựa chọn loại thẻ</string>

    <string name="payment_mc">Nạp qua thẻ MCCard</string>
    <string name="payment_mobi">Nạp qua thẻ Mobifone</string>
    <string name="payment_vina">Nạp qua thẻ Vinaphone</string>
    <string name="payment_vtc">Nạp qua thẻ Vtc</string>
    <string name="payment_viettel">Nạp qua thẻ Viettel</string>
    <string name="payment_fpt">Nạp qua thẻ FptCard</string>
    <string name="payment_sms_confirm_message">&lt;font color=#0fffff>Bạn có muốn gửi SMS &lt;/font>&lt;font color=#ffffff>15.000 VNĐ&lt;/font>&lt;br/> &lt;font color=#0fffff>để mua &lt;/font>&lt;font color=#ffffff>30.000 xu&lt;/font> &lt;font color=#0fffff>không?&lt;/font></string>
    <string name="payment_card_code_hint">Nhập mã thẻ</string>
    <string name="payment_card_serial_hint">Nhập số Serial trên thẻ</string>
    <string name="payment_description_scratch" formatted="false">Đổi xu bằng thẻ cào:&lt;br>
    20.000đ - 44.000xu &lt;font color=#0fffff>(+10%)&lt;/font>;&lt;br>
    50.000đ - 115.000xu &lt;font color=#0fffff>(+15%)&lt;/font>;&lt;br>
    100.000đ - 240.000xu &lt;font color=#0fffff>(+20%)&lt;/font>;&lt;br>
    200.000đ - 500.000xu &lt;font color=#0fffff>(+25%)&lt;/font>;&lt;br>
    500.000đ - 1.300.000xu &lt;font color=#0fffff>(+30%)&lt;/font></string>
    
   <string name="buy_game_text_wap">Bạn có muốn mua 30.000 xu bằng 15.000 đồng trong tài khoản điện thoại của mình không?\nNhấn "khác" để được mua ưu đãi hơn!</string>

    <string name="payment_sms_number">6711</string>
    <string name="payment_sms_code_level_1">RPW</string>
    <string name="payment_sms_code_level_2">DRGQVWBCB</string>

    <string name="payment_card_message">Bạn đã nạp thành công 15 xu</string>
    <string name="payment_btn_ok">Đồng ý</string>
    <string name="payment_alert_error">Lỗi</string>

</resources>
