<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/payment_background"
    android:gravity="center"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/payment_dialog_background"
        android:padding="5dp" >

        <LinearLayout
            android:id="@+id/layout_root"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            android:paddingTop="5dp" >

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:text="@string/payment_card_title"
                android:textColor="@color/payment_title_text_color"
                android:textSize="25sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:id="@+id/btn_mc"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/payment_button_bg"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/payment_blank" />

                    <TextView
                        android:id="@+id/txt_mc_item"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/payment_mc"
                        android:textColor="@color/payment_text_color"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btn_mobi"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/btn_mc"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/payment_button_bg"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/payment_mobi" />

                    <TextView
                        android:id="@+id/txt_mobi_item"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/payment_mobi"
                        android:textColor="@color/payment_text_color"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                        android:id="@+id/btn_vina"
                        android:layout_width="350dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/btn_mobi"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/payment_button_bg"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp" >

                    <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/payment_vina" />

                    <TextView
                            android:id="@+id/txt_vina_item"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/payment_vina"
                            android:textColor="@color/payment_text_color"
                            android:textSize="20sp" />
                </LinearLayout>
                <LinearLayout
                        android:id="@+id/btn_vtc"
                        android:layout_width="350dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/btn_vina"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/payment_button_bg"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp" >

                    <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/payment_blank" />

                    <TextView
                            android:id="@+id/txt_vtc_item"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/payment_vtc"
                            android:textColor="@color/payment_text_color"
                            android:textSize="20sp" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/btn_viettel"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/btn_vtc"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/payment_button_bg"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/payment_viettel" />

                    <TextView
                        android:id="@+id/txt_viettel_item"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/payment_viettel"
                        android:textColor="@color/payment_text_color"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btn_fpt"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/btn_viettel"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/payment_button_bg"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/payment_blank" />

                    <TextView
                        android:id="@+id/txt_fpt_item"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/payment_fpt"
                        android:textColor="@color/payment_text_color"
                        android:textSize="20sp" />
                </LinearLayout>
            </RelativeLayout>

            <TextView
                android:id="@+id/txt_caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/payment_card_caption"
                android:textColor="@color/payment_title_text_color"
                android:textSize="20sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/layout_root"
            android:background="@drawable/payment_btn_close" />
    </RelativeLayout>

</LinearLayout>